selene/tests/validate_config/invalid_base/rich_output.txt
error: failed to collect base standard library `not_found`
  ┌─ selene.toml:1:1
  │
1 │ std = "std"
  │ ^^^^^^^^^^^

